<resources>
    <string name="app_name">FootballMatchSchedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="toolbar_title">Football Match Schedule</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="about">About</string>
    <string name="sign_date">Sign Date</string>
    <string name="position">Position</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_location">Birth Location</string>
    <string name="nationality">Nationality</string>
    <string name="search">Search</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

</resources>
