<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="k.com.alvin.footballmatchschedule.PlayerDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_player"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/player_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/no_image" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/weight_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/weight_kg" />

                    <TextView
                        android:id="@+id/player_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weight_text"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        tools:text="65.76" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/height_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/height_m" />

                    <TextView
                        android:id="@+id/player_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/height_text"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        tools:text="1.68" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="10dp"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp"
            app:contentPaddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sign_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/sign_date"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/player_sign_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/sign_text"
                        android:layout_toRightOf="@+id/sign_text"
                        tools:text="16 September 2018" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/position_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/position"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/player_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/position_text"
                        android:layout_toRightOf="@+id/position_text"
                        tools:text="Forward" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="10dp"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp"
            app:contentPaddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/birth_date_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/birth_date"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/player_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/birth_date_text"
                        android:layout_toRightOf="@+id/birth_date_text"
                        tools:text="16 September 2018" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/birth_location_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_location"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/player_birth_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/birth_location_text"
                        android:layout_toRightOf="@+id/birth_location_text"
                        tools:text="Argentina" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nationality_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/nationality"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/player_nationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/nationality_text"
                        android:layout_toRightOf="@+id/nationality_text"
                        tools:text="Argentina" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="5dp"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp"
            app:contentPaddingTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/player_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about_text"
                    tools:text="Description" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
